implement zone service

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,5 +7,11 @@
         <h1>Welcome!</h1>
         
         <p>Click <a th:href="@{/hello}">here</a> to see a greeting.</p>
+        
+		<form method="POST" enctype="multipart/form-data" action="/file/upload">  
+		    File to upload: <input type="file" name="file" /><br /> 
+		    Name: <input type="text" name="name" /><br /> <br /> 
+		    <input type="submit" value="Upload" /> Press here to upload the file!  
+		</form>
     </body>
 </html>
