--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,7 +6,7 @@
     <body>
         <h1>Welcome!</h1>
         
-        <p>Click <a th:href="@{/hello}">here</a> to see a greeting.</p>
+        <p><a th:href="@{/dashboard}">Dashboard</a></p>
         
 		<form method="POST" enctype="multipart/form-data" action="/file/upload">  
 		    File to upload: <input type="file" name="file" /><br /> 
