--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,9 +4,9 @@
         <title>Latte</title>
     </head>
     <body>
-        <h1>Index Page</h1>
+        <h1>Hello </h1>
         
-        <p><a th:href="@{/home}">Home</a> Home Page</p>
+        <p><a th:href="@{/dashboard}">Dashboard</a></p>
         
         <p><a th:href="@{/login}">Login</a></p>
 		
